# connecting-dots

./: .env.example  .gitignore  .vercelignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json  vitest.config.ts
.github/workflows/: ci.yml
app/: layout.tsx  page.tsx
app/api/webhooks/whatsapp/: route.ts
app/privacy/: page.tsx
app/terms/: page.tsx
connecting_dots/: __init__.py  _env_bootstrap.py  dispatcher.py  inbound_envelope.py  types.py
connecting_dots/digest/: __init__.py  labels.py  resurface.py  wa_send.py  why_reason.py
connecting_dots/enrichment/: README.md  __init__.py  body_cleanup.py  edges.py  judge.py  moc.py  ner.py  queue.py  repair.py  tag_dedup.py  title.py  tldr.py  tracer.py  vault_readme_synth.py
connecting_dots/handlers/: __init__.py  _safe_fetch.py  base.py  instagram.py  linkedin.py  raw.py  web.py  youtube.py
connecting_dots/parsers/: __init__.py  whatsapp_export.py
docs/: algorithm-reconciliation.md  digest-setup.md
docs/dispatches/: README.md  body-cleanup.md  bundle-1-v2.md  bundle-2-digest.md  bundle-3-wikilinks.md  tag-dedup-v2.md  tag-dedup.md  untitled-fix.md  vault-readme.md
lib/: inbound-dispatch.ts  wa-signature.ts
lib/vault_writer/: __init__.py  writer.py
planning/: connecting-dots-shimmying-forest.md
schemas/: inbound_envelope.schema.json
scripts/: emit_envelope.mjs  init_lancedb.py  parse_envelope.py
tests/: inbound-dispatch.test.ts  route_whatsapp.test.ts  test_dispatcher.py  test_env_bootstrap.py  test_inbound_envelope_validator.py  test_linkedin_zip.py  test_mailto_poller.py  test_stream_consumer.py  test_vault_writer.py  test_whatsapp_export_parser.py  test_whatsapp_export_watcher.py  wa_signature.test.ts
tests/digest/: test_labels.py  test_resurface.py  test_wa_send.py  test_why_reason.py
tests/enrichment/: gold_set.json  test_body_cleanup.py  test_edges.py  test_judge.py  test_moc.py  test_ner.py  test_repair.py  test_tag_dedup.py  test_tag_dedup_v2.py  test_title.py  test_tldr.py  test_tracer.py  test_untitled_fix.py
tests/handlers/: test_instagram.py  test_linkedin.py  test_web.py  test_youtube.py
tests/workers/: test_body_cleanup_backfill.py  test_digest_builder.py  test_instagram_export_watcher.py  test_ner_backfill.py  test_tag_dedup_backfill.py  test_vault_readme_refresh.py  test_wikilink_builder.py  test_youtube_api_sync.py  test_youtube_recap.py  test_youtube_takeout_watcher.py  test_youtube_transcript_recovery.py
vault/: README.md
vault/.lancedb/: .gitignore
vault/inbox/: example.md
vault/themes/: by-topic.base  career-development.md  corporate-governance.md  design-systems.md  dividend-payout.md  dividends.md  financial-inclusion.md  financial-metrics.md  financial-performance.md  financial-results.md  hiring.md  indian-equities.md  indian-stock-market.md  investment-analysis.md  investment-strategies.md  investment-strategy.md  market-capitalization.md  mutual-funds.md  peer-comparison.md  portfolio-diversification.md  product-design.md  product-management.md  quarterly-earnings.md  quarterly-financial-results.md  quarterly-results.md  renewable-energy.md  semiconductor-industry.md  share-price-analysis.md  stock-analysis.md  stock-performance.md  system-design.md
workers/: body_cleanup_backfill.py  digest_builder.py  domain_tag_backfill.py  instagram_export_watcher.py  linkedin_zip_watcher.py  mailto_poller.py  moc_generator.py  ner_backfill.py  stream_consumer.py  tag_dedup_backfill.py  title_backfill.py  tldr_backfill.py  vault_readme_refresh.py  whatsapp_export_watcher.py  wikilink_builder.py  youtube_api_sync.py  youtube_recap.py  youtube_takeout_watcher.py  youtube_transcript_recovery.py
