[project]
name = "connecting-dots"
version = "0.1.0"
description = "Multi-channel URL capture pipeline (WhatsApp + mailto IMAP + future channels)."
requires-python = ">=3.11"
dependencies = [
    # stdlib covers imaplib + email; tldextract is used by downstream URL routing
    # (component #2) but pinned here so the IMAP worker image is self-contained.
    "tldextract>=5.1.2",
    # Stream bridge consumer (Upstash REST + envelope validation).
    "upstash-redis>=1.4.0",
    "pydantic>=2.7",
    # YouTube handler (#3) — transcript fetch + video metadata.
    "youtube-transcript-api>=1.0.0",
    "yt-dlp>=2024.10.0",
    # Instagram (#4) + web fallback (#4) — HTTP fetch + OG / readable text.
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "trafilatura>=2.0",
    # LanceDB sidecar index (scripts/init_lancedb.py + future retrieval layer).
    "lancedb>=0.13",
    # WhatsApp Export Chat ZIP watcher — used to parse iOS/Android timestamp
    # strings in `_chat.txt` (locale ambiguity: DD/MM/YYYY vs MM/DD/YYYY).
    "python-dateutil>=2.9",
    # NER + topic extraction (#8) — Azure OpenAI (gpt-4.1) with automatic
    # prompt-prefix caching + function calling.
    "openai>=1.50",
    # Backfill progress bar.
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "datamodel-code-generator>=0.26",
    # respx mocks httpx in-process — no live network in tests.
    "respx>=0.21",
]

[project.scripts]
mailto-poller = "workers.mailto_poller:run_forever"
stream-consumer = "workers.stream_consumer:run_forever"
linkedin-zip-watcher = "workers.linkedin_zip_watcher:run_forever"
whatsapp-export-watcher = "workers.whatsapp_export_watcher:run_forever"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["connecting_dots*", "workers*"]
